--- a/Style.css
+++ b/Style.css
@@ -5,7 +5,7 @@ font-family: 'Montserrat', sans-serif;
 
 
 :root {
-    --welcomeImage:url('Images/front.jpg');
+    --welcomeImage:url('../Images/front.jpg');
     
     --mainBlack: #222;
     --mainTransition: all 0.3s linear;
