--- a/Style/Sponsors-bar.css
+++ b/Style/Sponsors-bar.css
@@ -77,3 +77,7 @@
 }
 
 
+.container-sp{
+  background-image: linear-gradient(180deg, rgb(250, 250, 250) ,  rgba(15, 10, 31, 0)), var(--background4);
+
+}
