--- a/Style/Hero.css
+++ b/Style/Hero.css
@@ -1,8 +1,10 @@
 .hero{
     background-color: grey;
 
-    background-image: linear-gradient(45deg,  rgba(15, 10, 31, 0.6), rgba(15, 10, 31, 0.6)),
-                        var(--welcomeImage);
+    /* background-image: linear-gradient(45deg,  rgba(15, 10, 31, 0.6), rgba(15, 10, 31, 0.6)),
+                        var(--welcomeImage); */
+    background-image: linear-gradient(45deg,  rgba(0, 0, 0, 0.6),  rgba(0,0,0, 0.6)),
+    var(--welcomeImage);
     height: fit-content;
     background-position: center;
     background-size: cover;
