added functionality to products page

--- a/Style/Navbar.css
+++ b/Style/Navbar.css
@@ -35,6 +35,7 @@ Button{
     border-width: 1px;
     border-color: var(--mainRed);
     transition: var(--mainTransition);
+    cursor: pointer;
 }
 
 Button:hover{
