--- a/Style/Contracting.css
+++ b/Style/Contracting.css
@@ -1,6 +1,6 @@
 #worksDisplay{
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr ;
+    grid-template-columns: 1fr 1fr 1fr ;
     justify-content: center;
     align-items: center;
 }
