--- a/Style/Responsive.css
+++ b/Style/Responsive.css
@@ -1,3 +1,10 @@
+@media ( min-width: 1050px ) {
+    #cartItemImage{
+        width: 20%;
+    }
+}
+
+
 @media ( max-width: 1050px ) {
     :root {
         --mainPadding:80px;
@@ -58,6 +65,9 @@
         grid-template-columns: 1fr 1fr;
 
     }
+    #cartList{
+        width: 70%;
+    }
     .productsCont{
 
     grid-template-columns: 1fr 1fr;
@@ -74,22 +84,35 @@
 
     }
 
-    /* .socials i{
-        display: none;
-
-
+    .quantCont{
+        line-height: 1px;;
     }
-    .socials s{
-        display: none;
-    } */
+    .quantCont h5{
+        margin-top: 8px;
+    }
+    #cancelProduct{
+        width: 8px;  
+        background-color: #00000000;
+        border: none;
+        font-size: 5px;
+        padding: 0;
+     }
 
-}
+    #cartItemImage{
+        width: 25%;
+    }
+    #cartList{
+        padding:20px;
+    }
 
-
-
-
-@media ( max-width: 500px ) {
-
+    #cartList h1{
+        font-size: 25px;
+    }
+    #cartItemDesc h1{
+        margin-top: 8px;
+        font-size: 15px;
+    }
+  
 
     .productsCont{
         padding-left: 0px;
@@ -99,6 +122,14 @@
         height: fit-content;
         width: 99%;
     }
+}
+
+
+
+
+@media ( max-width: 500px ) {
+
+   
     .names{
         display: flex;
         flex-direction: column;
@@ -113,9 +144,7 @@
 
         .row.header h3{
             font-size: 14px;    }
-    #cartList{
-        width: 70%;
-    }
+ 
     
   .name{
     margin: 10px;
@@ -203,8 +232,9 @@
 
 @media ( min-width: 760px ) {
     #hamburger{
-        transform: translateY(0px);
+        transform: translateY(0px);}
 
+     
 }
 
 
@@ -244,7 +274,6 @@
 
 @media ( max-width: 480px ) {
    
-   
 
 	.quotecontainer{
         transform: translateY(-30px);
@@ -272,4 +301,4 @@
 	font-family: 'Roboto', sans-serif;
   }
 
-}
+
